## Process this file with automake to produce Makefile.in
AM_CPPFLAGS = -DDATADIR='"$(pkgdatadir)"' -D_GNU_SOURCE
bin_PROGRAMS = fachoda getkeyname

nobase_dist_pkgdata_DATA = \
    bigfont.tga complex.jpg font.tga icon.png metal50_50.tga wood50_50.tga \
    arbre2/Branche1 \
    arbre2/Branche1.col \
    arbre2/Branche2 \
    arbre2/Branche2.col \
    arbre2/Branche3 \
    arbre2/Branche3.col \
    arbre2/Feuille1 \
    arbre2/Feuille1.col \
    arbre2/Feuille2 \
    arbre2/Feuille2.col \
    arbre2/Feuille3 \
    arbre2/Feuille3.col \
    arbre2/Feuille4 \
    arbre2/Feuille4.col \
    arbre2/Tronc \
    arbre2/Tronc.col \
    base1/Hangar1 \
    base1/Hangar1.col \
    base1/Hangar2 \
    base1/Hangar2.col \
    base1/Huit \
    base1/Huit.col \
    base1/Light1 \
    base1/Light10 \
    base1/Light11 \
    base1/Light12 \
    base1/Light13 \
    base1/Light14 \
    base1/Light2 \
    base1/Light3 \
    base1/Light4 \
    base1/Light5 \
    base1/Light6 \
    base1/Light7 \
    base1/Light8 \
    base1/Light9 \
    base1light/Hangar1 \
    base1light/Hangar2 \
    base1/MancheAAir \
    base1/MancheAAir.col \
    base1/Mark1 \
    base1/Mark10 \
    base1/Mark10.col \
    base1/Mark11 \
    base1/Mark11.col \
    base1/Mark12 \
    base1/Mark12.col \
    base1/Mark13 \
    base1/Mark13.col \
    base1/Mark14 \
    base1/Mark14.col \
    base1/Mark1.col \
    base1/Mark2 \
    base1/Mark2.col \
    base1/Mark3 \
    base1/Mark3.col \
    base1/Mark4 \
    base1/Mark4.col \
    base1/Mark5 \
    base1/Mark5.col \
    base1/Mark6 \
    base1/Mark6.col \
    base1/Mark7 \
    base1/Mark7.col \
    base1/Mark8 \
    base1/Mark8.col \
    base1/Mark9 \
    base1/Mark9.col \
    base1/PiedMancheAAir \
    base1/PiedMancheAAir.col \
    base1/Repere1 \
    base1/Repere1.col \
    base1/Repere2 \
    base1/Repere2.col \
    base1/Tour1 \
    base1/Tour1.col \
    base1/Tour2 \
    base1/Tour2.col \
    base1/Un \
    base1/Un.col \
    bovide/Bidoche \
    bovide/Bidoche.col \
    bovide/CorneD \
    bovide/CorneD.col \
    bovide/CorneG \
    bovide/CorneG.col \
    bovide/Cou \
    bovide/Cou.col \
    bovide/Lait \
    bovide/Lait.col \
    bovide/OreilleD \
    bovide/OreilleD.col \
    bovide/OreilleG \
    bovide/OreilleG.col \
    bovide/PateD \
    bovide/PateD.col \
    bovide/PateG \
    bovide/PateG.col \
    bovide/Queue \
    bovide/Queue.col \
    bovide/RomsteackD \
    bovide/RomsteackD.col \
    bovide/RomsteackG \
    bovide/RomsteackG.col \
    bovide/Tete \
    bovide/Tete.col \
    chalet/Facade0 \
    chalet/Facade0.col \
    chalet/Facade1 \
    chalet/Facade1.col \
    chalet/Facade2 \
    chalet/Facade2.col \
    chalet/Murs \
    chalet/Murs.col \
    corsair/AileD1 \
    corsair/AileD1.col \
    corsair/AileD2 \
    corsair/AileD2.col \
    corsair/AileD3 \
    corsair/AileD3.col \
    corsair/AileD4 \
    corsair/AileD4.col \
    corsair/AileG1 \
    corsair/AileG1.col \
    corsair/AileG2 \
    corsair/AileG2.col \
    corsair/AileG3 \
    corsair/AileG3.col \
    corsair/AileG4 \
    corsair/AileG4.col \
    corsair/AileronD \
    corsair/AileronD.col \
    corsair/AileronG \
    corsair/AileronG.col \
    corsair/Cabine \
    corsair/Cabine.col \
    corsair/Canon1 \
    corsair/Canon1.col \
    corsair/Canon2 \
    corsair/Canon2.col \
    corsair/Canon3 \
    corsair/Canon3.col \
    corsair/Canon4 \
    corsair/Canon4.col \
    corsair/CharniereDroite \
    corsair/CharniereDroite.col \
    corsair/CharniereGauche \
    corsair/CharniereGauche.col \
    corsair/CharnInclinD \
    corsair/CharnInclinD.col \
    corsair/CharnInclinG \
    corsair/CharnInclinG.col \
    corsair/CharnProf \
    corsair/CharnProf.col \
    corsair/Echapement \
    corsair/Echapement.col \
    corsair/EssieuD \
    corsair/EssieuDroit \
    corsair/EssieuDroit.col \
    corsair/EssieuG \
    corsair/EssieuGauche \
    corsair/EssieuGauche.col \
    corsair/FuselageArriere \
    corsair/FuselageArriere.col \
    corsair/FuselageAvant \
    corsair/FuselageAvant.col \
    corsair/Gouvernail \
    corsair/Gouvernail.col \
    corsair/HBomb1 \
    corsair/HBomb1A1 \
    corsair/HBomb1A1.col \
    corsair/HBomb1A2 \
    corsair/HBomb1A2.col \
    corsair/HBomb1A3 \
    corsair/HBomb1A3.col \
    corsair/HBomb1A4 \
    corsair/HBomb1A4.col \
    corsair/HBomb1.col \
    corsair/HBomb2 \
    corsair/HBomb2A1 \
    corsair/HBomb2A1.col \
    corsair/HBomb2A2 \
    corsair/HBomb2A2.col \
    corsair/HBomb2A3 \
    corsair/HBomb2A3.col \
    corsair/HBomb2A4 \
    corsair/HBomb2A4.col \
    corsair/HBomb2.col \
    corsair/HBomb3 \
    corsair/HBomb3A1 \
    corsair/HBomb3A1.col \
    corsair/HBomb3A2 \
    corsair/HBomb3A2.col \
    corsair/HBomb3A3 \
    corsair/HBomb3A3.col \
    corsair/HBomb3A4 \
    corsair/HBomb3A4.col \
    corsair/HBomb3.col \
    corsair/HBomb4 \
    corsair/HBomb4A1 \
    corsair/HBomb4A1.col \
    corsair/HBomb4A2 \
    corsair/HBomb4A2.col \
    corsair/HBomb4A3 \
    corsair/HBomb4A3.col \
    corsair/HBomb4A4 \
    corsair/HBomb4A4.col \
    corsair/HBomb4.col \
    corsairlight/AileD1 \
    corsairlight/AileD3 \
    corsairlight/AileG1 \
    corsairlight/AileG3 \
    corsairlight/AileronD \
    corsairlight/AileronG \
    corsairlight/Cabine \
    corsairlight/Canon1 \
    corsairlight/Canon2 \
    corsairlight/Canon3 \
    corsairlight/Canon4 \
    corsairlight/CharniereDroite \
    corsairlight/CharniereGauche \
    corsairlight/EssieuD \
    corsairlight/EssieuG \
    corsairlight/FuselageArriere \
    corsairlight/FuselageAvant \
    corsairlight/Gouvernail \
    corsairlight/HBomb1 \
    corsairlight/HBomb1A1 \
    corsairlight/HBomb1A2 \
    corsairlight/HBomb1A3 \
    corsairlight/HBomb2 \
    corsairlight/HBomb2A1 \
    corsairlight/HBomb2A2 \
    corsairlight/HBomb2A3 \
    corsairlight/HBomb3 \
    corsairlight/HBomb3A1 \
    corsairlight/HBomb3A2 \
    corsairlight/HBomb3A3 \
    corsairlight/HBomb4 \
    corsairlight/HBomb4A1 \
    corsairlight/HBomb4A2 \
    corsairlight/HBomb4A3 \
    corsairlight/MoyeuPale \
    corsairlight/Pale1 \
    corsairlight/Pale2 \
    corsairlight/Pale3 \
    corsairlight/PiedArriere \
    corsairlight/RoueArriere \
    corsairlight/RoueD \
    corsairlight/RoueG \
    corsairlight/Verriere \
    corsair/MoyeuPale \
    corsair/MoyeuPale.col \
    corsair/Pale1 \
    corsair/Pale1.col \
    corsair/Pale2 \
    corsair/Pale2.col \
    corsair/Pale3 \
    corsair/Pale3.col \
    corsair/PiedArriere \
    corsair/PiedArriere.col \
    corsair/PosCam \
    corsair/RoueArriere \
    corsair/RoueArriere.col \
    corsair/RoueD \
    corsair/RoueDroite \
    corsair/RoueDroite.col \
    corsair/RoueG \
    corsair/RoueGauche \
    corsair/RoueGauche.col \
    corsair/TabBord \
    corsair/TabBord.col \
    corsair/Verriere \
    corsair/Verriere.col \
    corsair/VoletD \
    corsair/VoletG \
    corsair/VolInclinD \
    corsair/VolInclinD.col \
    corsair/VolInclinG \
    corsair/VolInclinG.col \
    corsair/VolProfD \
    corsair/VolProfD.col \
    corsair/VolProfG \
    corsair/VolProfG.col \
    d501/AileD1 \
    d501/AileD1.col \
    d501/AileD2 \
    d501/AileD2.col \
    d501/AileD3 \
    d501/AileD3.col \
    d501/AileD4 \
    d501/AileD4.col \
    d501/AileG1 \
    d501/AileG1.col \
    d501/AileG2 \
    d501/AileG2.col \
    d501/AileG3 \
    d501/AileG3.col \
    d501/AileG4 \
    d501/AileG4.col \
    d501/AileronD \
    d501/AileronD.col \
    d501/AileronG \
    d501/AileronG.col \
    d501/CacheRoueD \
    d501/CacheRoueD.col \
    d501/CacheRoueG \
    d501/CacheRoueG.col \
    d501/CanonD \
    d501/CanonG \
    d501/Capot \
    d501/Capot.col \
    d501/Casque \
    d501/Casque.col \
    d501/CharniereID \
    d501/CharniereID.col \
    d501/CharniereIG \
    d501/CharniereIG.col \
    d501/CharnVProf \
    d501/CharnVProf.col \
    d501/Cockpit \
    d501/Cockpit.col \
    d501/Empenage \
    d501/Empenage.col \
    d501/FinFuselage \
    d501/FinFuselage.col \
    d501/Fuselage \
    d501/Fuselage.col \
    d501/Gouvernail \
    d501/Gouvernail.col \
    d501/HB0 \
    d501/HB0a1 \
    d501/HB0a1.col \
    d501/HB0a2 \
    d501/HB0a2.col \
    d501/HB0a3 \
    d501/HB0a3.col \
    d501/HB0a4 \
    d501/HB0a4.col \
    d501/HB0.col \
    d501/HB0Queue \
    d501/HB0Queue.col \
    d501/HB1 \
    d501/HB1a1 \
    d501/HB1a1.col \
    d501/HB1a2 \
    d501/HB1a2.col \
    d501/HB1a3 \
    d501/HB1a3.col \
    d501/HB1a4 \
    d501/HB1a4.col \
    d501/HB1.col \
    d501/HB1Queue \
    d501/HB1Queue.col \
    d501/Helice1 \
    d501/Helice1.col \
    d501/Helice2 \
    d501/Helice2.col \
    d501/InclinD \
    d501/InclinD.col \
    d501/InclinG \
    d501/InclinG.col \
    d501light/AileD1 \
    d501light/AileG1 \
    d501light/AileG1_0 \
    d501light/AileG1_1 \
    d501light/AileronD \
    d501light/AileronG \
    d501light/CacheRoueD \
    d501light/CacheRoueG \
    d501light/CanonD \
    d501light/CanonG \
    d501light/Capot \
    d501light/CharnVProf \
    d501light/Cockpit \
    d501light/Empenage \
    d501light/FinFuselage \
    d501light/Fuselage \
    d501light/Gouvernail \
    d501light/HB0 \
    d501light/HB0a1 \
    d501light/HB0a2 \
    d501light/HB0a3 \
    d501light/HB0a4 \
    d501light/HB1 \
    d501light/HB1a1 \
    d501light/HB1a2 \
    d501light/HB1a3 \
    d501light/HB1a4 \
    d501light/Helice1 \
    d501light/Helice2 \
    d501light/MitrailleuseD \
    d501light/MitrailleuseG \
    d501light/MitSocleD \
    d501light/MitSocleG \
    d501light/Moyeu \
    d501light/RoueArriere \
    d501light/RoueD \
    d501light/RoueG \
    d501light/RouePied \
    d501light/Tete \
    d501light/TubeD1 \
    d501light/TubeD2 \
    d501light/TubeD3 \
    d501light/TubeG1 \
    d501light/TubeG2 \
    d501light/TubeG3 \
    d501/LunetteD \
    d501/LunetteD.col \
    d501/LunetteG \
    d501/LunetteG.col \
    d501/Masque \
    d501/Masque.col \
    d501/MitrailleuseD \
    d501/MitrailleuseG \
    d501/MitSocleD \
    d501/MitSocleD.col \
    d501/MitSocleG \
    d501/MitSocleG.col \
    d501/Moyeu \
    d501/Moyeu.col \
    d501/PosCam \
    d501/PosCam.col \
    d501/RoueArriere \
    d501/RoueArriere.col \
    d501/RoueD \
    d501/RoueD.col \
    d501/RoueG \
    d501/RoueG.col \
    d501/RouePied \
    d501/RouePied.col \
    d501/RouG \
    d501/TabBord \
    d501/TabBord.col \
    d501/Tete \
    d501/Tete.col \
    d501/TubeD1 \
    d501/TubeD1.col \
    d501/TubeD2 \
    d501/TubeD2.col \
    d501/TubeD3 \
    d501/TubeD3.col \
    d501/TubeG1 \
    d501/TubeG1.col \
    d501/TubeG2 \
    d501/TubeG2.col \
    d501/TubeG3 \
    d501/TubeG3.col \
    d501/ViseurD \
    d501/ViseurG \
    d501/VProfD \
    d501/VProfD.col \
    d501/VProfG \
    d501/VProfG.col \
    eglise/Clocher \
    eglise/Clocher.col \
    eglise/ContreFort1 \
    eglise/ContreFort1.col \
    eglise/ContreFort2 \
    eglise/ContreFort2.col \
    eglise/ContreFort3 \
    eglise/ContreFort3.col \
    eglise/ContreFort4 \
    eglise/ContreFort4.col \
    eglise/ContreFort5 \
    eglise/ContreFort5.col \
    eglise/ContreFort6 \
    eglise/ContreFort6.col \
    eglise/ContreFort7 \
    eglise/ContreFort7.col \
    eglise/ContreFort8 \
    eglise/ContreFort8.col \
    eglise/Girouette \
    egliselight/Clocher \
    egliselight/ContreFort1 \
    egliselight/ContreFort2 \
    egliselight/ContreFort3 \
    egliselight/ContreFort4 \
    egliselight/ContreFort5 \
    egliselight/ContreFort6 \
    egliselight/ContreFort7 \
    egliselight/ContreFort8 \
    egliselight/Nef \
    eglise/Nef1 \
    eglise/Nef1.col \
    eglise/Nef2 \
    eglise/Nef2.col \
    eglise/Nef3 \
    eglise/Nef3.col \
    eglise/Porte \
    eglise/Porte.col \
    eglise/Toit \
    eglise/Toit.col \
    ferme/Grange \
    ferme/Grange.col \
    ferme/GrangeToit \
    ferme/GrangeToit.col \
    ferme/Hab1 \
    ferme/Hab1.col \
    ferme/Hab2 \
    ferme/Hab2.col \
    ferme/Mur1 \
    ferme/Mur1.col \
    ferme/Mur2 \
    ferme/Mur2.col \
    ferme/Mur3 \
    ferme/Mur3.col \
    ferme/Mur4 \
    ferme/Mur4.col \
    ferme/Poteau1 \
    ferme/Poteau1.col \
    ferme/Poteau2 \
    ferme/Poteau2.col \
    ferme/Poteau3 \
    ferme/Poteau3.col \
    ferme/Toit1 \
    ferme/Toit1.col \
    ferme/Toit2 \
    ferme/Toit2.col \
    maison/Cheminee \
    maison/Cheminee2 \
    maison/Cheminee2.col \
    maison/Cheminee.col \
    maison/Fenetre \
    maison/Fenetre2 \
    maison/Fenetre2.col \
    maison/Fenetre.col \
    maison/Murs \
    maison/Murs.col \
    maison/Porte \
    maison/Porte.col \
    maison/Rebord \
    maison/Rebord.col \
    maison/Toit \
    maison/Toit.col \
    moshito/AileD1 \
    moshito/AileD1.col \
    moshito/AileD2 \
    moshito/AileD2.col \
    moshito/AileD3 \
    moshito/AileD3.col \
    moshito/AileD4 \
    moshito/AileD4.col \
    moshito/AileG1 \
    moshito/AileG1.col \
    moshito/AileG2 \
    moshito/AileG2.col \
    moshito/AileG3 \
    moshito/AileG3.col \
    moshito/AileG4 \
    moshito/AileG4.col \
    moshito/Cabine \
    moshito/Cabine.col \
    moshito/Canon1 \
    moshito/Canon1.col \
    moshito/Canon2 \
    moshito/Canon2.col \
    moshito/Canon3 \
    moshito/Canon3.col \
    moshito/Canon4 \
    moshito/Canon4.col \
    moshito/CharniereA \
    moshito/CharniereA.col \
    moshito/CharniereD \
    moshito/CharniereD.col \
    moshito/CharniereG \
    moshito/CharniereG.col \
    moshito/CharniereSD \
    moshito/CharniereSD.col \
    moshito/CharniereSG \
    moshito/CharniereSG.col \
    moshito/CharnInclinD \
    moshito/CharnInclinD.col \
    moshito/CharnInclinG \
    moshito/CharnInclinG.col \
    moshito/CharnProf \
    moshito/CharnProf.col \
    moshito/Echap \
    moshito/Echap.col \
    moshito/EssieuAvant \
    moshito/EssieuAvant.col \
    moshito/EssieuD \
    moshito/EssieuD.col \
    moshito/EssieuG \
    moshito/EssieuG.col \
    moshito/FuselageArriere \
    moshito/FuselageArriere.col \
    moshito/FuselageAvant \
    moshito/FuselageAvant.col \
    moshito/GouvD \
    moshito/GouvD.col \
    moshito/GouvG \
    moshito/GouvG.col \
    moshito/HB1 \
    moshito/HB1A1 \
    moshito/HB1A1.col \
    moshito/HB1A2 \
    moshito/HB1A2.col \
    moshito/HB1A3 \
    moshito/HB1A3.col \
    moshito/HB1.col \
    moshito/HB2 \
    moshito/HB2A1 \
    moshito/HB2A1.col \
    moshito/HB2A2 \
    moshito/HB2A2.col \
    moshito/HB2A3 \
    moshito/HB2A3.col \
    moshito/HB2.col \
    moshito/HB3 \
    moshito/HB3A1 \
    moshito/HB3A1.col \
    moshito/HB3A2 \
    moshito/HB3A2.col \
    moshito/HB3A3 \
    moshito/HB3A3.col \
    moshito/HB3.col \
    moshito/HB4 \
    moshito/HB4A1 \
    moshito/HB4A1.col \
    moshito/HB4A2 \
    moshito/HB4A2.col \
    moshito/HB4A3 \
    moshito/HB4A3.col \
    moshito/HB4.col \
    moshitolight/AileD1 \
    moshitolight/AileD4 \
    moshitolight/AileG1 \
    moshitolight/AileG4 \
    moshitolight/Cabine \
    moshitolight/Canon1 \
    moshitolight/Canon2 \
    moshitolight/Canon3 \
    moshitolight/Canon4 \
    moshitolight/CharniereA \
    moshitolight/CharniereD \
    moshitolight/CharniereG \
    moshitolight/CharniereG_0 \
    moshitolight/CharniereG_1 \
    moshitolight/EssieuAvant \
    moshitolight/EssieuD \
    moshitolight/EssieuG \
    moshitolight/FuselageAvant \
    moshitolight/GouvD \
    moshitolight/GouvG \
    moshitolight/HB1 \
    moshitolight/HB2 \
    moshitolight/HB3 \
    moshitolight/HB4 \
    moshitolight/MoteurD \
    moshitolight/MoteurG \
    moshitolight/MoyeuD \
    moshitolight/MoyeuG \
    moshitolight/PaleD1 \
    moshitolight/PaleD2 \
    moshitolight/PaleD3 \
    moshitolight/PaleG1 \
    moshitolight/PaleG2 \
    moshitolight/PaleG3 \
    moshitolight/Queue \
    moshitolight/RoueAvant \
    moshitolight/RoueD \
    moshitolight/RoueG \
    moshitolight/Verriere \
    moshito/MachinRoueAvant \
    moshito/MachinRoueAvant.col \
    moshito/MoteurD \
    moshito/MoteurD.col \
    moshito/MoteurG \
    moshito/MoteurG.col \
    moshito/MoyeuD \
    moshito/MoyeuD.col \
    moshito/MoyeuG \
    moshito/MoyeuG.col \
    moshito/PaleD1 \
    moshito/PaleD1.col \
    moshito/PaleD2 \
    moshito/PaleD2.col \
    moshito/PaleD3 \
    moshito/PaleD3.col \
    moshito/PaleG1 \
    moshito/PaleG1.col \
    moshito/PaleG2 \
    moshito/PaleG2.col \
    moshito/PaleG3 \
    moshito/PaleG3.col \
    moshito/Poignee \
    moshito/Poignee.col \
    moshito/PosCam \
    moshito/Queue \
    moshito/Queue.col \
    moshito/RoueAvant \
    moshito/RoueAvant.col \
    moshito/RoueD \
    moshito/RoueD.col \
    moshito/RoueG \
    moshito/RoueG.col \
    moshito/SasAvantD \
    moshito/SasAvantD.col \
    moshito/SasAvantG \
    moshito/SasAvantG.col \
    moshito/Six \
    moshito/TabBord \
    moshito/TabBord.col \
    moshito/Tube \
    moshito/Tube.col \
    moshito/Verriere \
    moshito/Verriere.col \
    moshito/VInclinD \
    moshito/VInclinD.col \
    moshito/VInclinG \
    moshito/VInclinG.col \
    moshito/VProf \
    moshito/VProf.col \
    moulin/Moulin \
    moulin/Moulin.col \
    moulin/Moyeu \
    moulin/Moyeu.col \
    moulin/Pale1 \
    moulin/Pale1.col \
    moulin/Pale2 \
    moulin/Pale2.col \
    moulin/Pale3 \
    moulin/Pale3.col \
    moulin/Pale4 \
    moulin/Pale4.col \
    moulin/Sac1 \
    moulin/Sac1.col \
    moulin/Sac2 \
    moulin/Sac2.col \
    moulin/Sac3 \
    moulin/Sac3.col \
    moulin/Sac4 \
    moulin/Sac4.col \
    reverbere/Pied \
    reverbere/Pied.col \
    reverbere/Tete \
    reverbere/Tete.col \
    snd2/bombhit.wav \
    snd2/boum.wav \
    snd2/bravo.wav \
    snd2/click1.wav \
    snd2/death.wav \
    snd2/shot1.wav \
    snd2/shot2.wav \
    snd2/spit1.wav \
    snd2/spit2.wav \
    snd2/spit3.wav \
    snd2/spit4.wav \
    snd2/taxi.wav \
    snd/alert.raw \
    snd/alleluia.raw \
    snd/bipbip2.raw \
    snd/bipbip.raw \
    snd/bipcarte.raw \
    snd/bipintro.raw \
    snd/bravo.raw \
    snd/death.raw \
    snd/explo1.raw \
    snd/exploz.raw \
    snd/feu.raw \
    snd/gear_dn.raw \
    snd/gear_up.raw \
    snd/hit.raw \
    snd/message.raw \
    snd/motor.raw \
    snd/pain.raw \
    snd/pingouin.raw \
    snd/screetch.raw \
    snd/shot.raw \
    snd/taratata.raw \
    snd/tole.raw \
    snophill/AileD1 \
    snophill/AileD1.col \
    snophill/AileD2 \
    snophill/AileD2.col \
    snophill/AileG1 \
    snophill/AileG1.col \
    snophill/AileG2 \
    snophill/AileG2.col \
    snophill/AileSup \
    snophill/AileSup.col \
    snophill/AileSupD \
    snophill/AileSupD.col \
    snophill/AileSupG \
    snophill/AileSupG.col \
    snophill/Cabine \
    snophill/Cabine.col \
    snophill/Canon \
    snophill/Canon.col \
    snophill/CharnID \
    snophill/CharnIG \
    snophill/CharnProf \
    snophill/Form41 \
    snophill/Gouv \
    snophill/Gouv.col \
    snophill/Hel1 \
    snophill/Hel1.col \
    snophill/Hel2 \
    snophill/Hel2.col \
    snophill/InclinD \
    snophill/InclinD.col \
    snophill/InclinG \
    snophill/InclinG.col \
    snophill/LunD \
    snophill/LunD.col \
    snophill/LunG \
    snophill/LunG.col \
    snophill/Mitrailleuse \
    snophill/Mitrailleuse.col \
    snophill/Moyeux \
    snophill/Moyeux.col \
    snophill/Nez \
    snophill/Nez.col \
    snophill/PosCam \
    snophill/PRA \
    snophill/PRA.col \
    snophill/PRD1 \
    snophill/PRD1.col \
    snophill/PRD2 \
    snophill/PRD2.col \
    snophill/PRG1 \
    snophill/PRG1.col \
    snophill/PRG2 \
    snophill/PRG2.col \
    snophill/ProfD \
    snophill/ProfD.col \
    snophill/ProfG \
    snophill/ProfG.col \
    snophill/Queue \
    snophill/Queue.col \
    snophill/Rebord \
    snophill/Rebord.col \
    snophill/RoueA \
    snophill/RoueA.col \
    snophill/RoueD \
    snophill/RoueD.col \
    snophill/RoueG \
    snophill/RoueG.col \
    snophill/StabD \
    snophill/StabD.col \
    snophill/StabG \
    snophill/StabG.col \
    snophill/TabBord \
    snophill/TabBord.col \
    snophill/Tete \
    snophill/Tete.col \
    snophill/Tube1 \
    snophill/Tube1.col \
    snophill/Tube2 \
    snophill/Tube2.col \
    snophill/Tube3 \
    snophill/Tube3.col \
    snophill/Tube4 \
    snophill/Tube4.col \
    snophill/Tube5 \
    snophill/Tube5.col \
    snophill/Tube6 \
    snophill/Tube6.col \
    snoplight/AileD1 \
    snoplight/AileD2 \
    snoplight/AileG1 \
    snoplight/AileG2 \
    snoplight/AileSup \
    snoplight/AileSupD \
    snoplight/AileSupG \
    snoplight/Cabine \
    snoplight/Gouv \
    snoplight/Hel1 \
    snoplight/Hel2 \
    snoplight/Nez \
    snoplight/PRA \
    snoplight/PRD \
    snoplight/PRG \
    snoplight/Queue \
    snoplight/RoueD \
    snoplight/RoueG \
    snoplight/StabD \
    snoplight/StabG \
    snoplight/Tube1 \
    snoplight/Tube2 \
    snoplight/Tube4 \
    snoplight/Tube5 \
    sol/Branche01 \
    sol/Branche01.col \
    sol/Branche02 \
    sol/Branche02.col \
    sol/Branche03 \
    sol/Branche03.col \
    sol/Cratere0 \
    sol/Cratere0.col \
    sol/Debris0 \
    sol/Debris0.col \
    sol/Nuage \
    sol/Nuage.col \
    sol/Tronc0 \
    sol/Tronc0.col \
    spitflame/AileD1 \
    spitflame/AileD1.col \
    spitflame/AileD2 \
    spitflame/AileD2.col \
    spitflame/AileG1 \
    spitflame/AileG1.col \
    spitflame/AileG2 \
    spitflame/AileG2.col \
    spitflame/B0 \
    spitflame/B0.col \
    spitflame/B0L \
    spitflame/B0L.col \
    spitflame/B1 \
    spitflame/B1.col \
    spitflame/B1L \
    spitflame/B1L.col \
    spitflame/B2 \
    spitflame/B2.col \
    spitflame/B2L \
    spitflame/B2L.col \
    spitflame/B3 \
    spitflame/B3.col \
    spitflame/B3L \
    spitflame/B3L.col \
    spitflame/B4 \
    spitflame/B4.col \
    spitflame/B4L \
    spitflame/B4L.col \
    spitflame/B5 \
    spitflame/B5.col \
    spitflame/B5L \
    spitflame/B5L.col \
    spitflame/B6 \
    spitflame/B6.col \
    spitflame/B6L \
    spitflame/B6L.col \
    spitflame/Cabine \
    spitflame/Cabine.col \
    spitflame/Canon1 \
    spitflame/Canon1.col \
    spitflame/Canon2 \
    spitflame/Canon2.col \
    spitflame/Canon3 \
    spitflame/Canon3.col \
    spitflame/Canon4 \
    spitflame/Canon4.col \
    spitflame/Capot \
    spitflame/Capot.col \
    spitflame/CharnInclinD \
    spitflame/CharnInclinG \
    spitflame/CharnProf \
    spitflame/FuselageAr \
    spitflame/FuselageAr.col \
    spitflame/FuselageAv \
    spitflame/FuselageAv.col \
    spitflame/Gouv \
    spitflame/Gouv.col \
    spitflame/Hel1 \
    spitflame/Hel1.col \
    spitflame/Hel2 \
    spitflame/Hel2.col \
    spitflame/Hel3 \
    spitflame/Hel3.col \
    spitflame/InclinD \
    spitflame/InclinD.col \
    spitflame/InclinG \
    spitflame/InclinG.col \
    spitflamelight/AileD1 \
    spitflamelight/AileD2 \
    spitflamelight/AileG1 \
    spitflamelight/AileG2 \
    spitflamelight/Cabine \
    spitflamelight/Capot \
    spitflamelight/FuselageAr \
    spitflamelight/FuselageAv \
    spitflamelight/Gouv \
    spitflamelight/Hel1 \
    spitflamelight/Hel2 \
    spitflamelight/Hel3 \
    spitflamelight/PiedRoues \
    spitflamelight/RoueAr \
    spitflamelight/RoueD \
    spitflamelight/RoueG \
    spitflamelight/StabD \
    spitflamelight/StabG \
    spitflamelight/Verriere \
    spitflame/Moyeux \
    spitflame/Moyeux.col \
    spitflame/PiedRoues \
    spitflame/PiedRoues.col \
    spitflame/PosCam \
    spitflame/ProfD \
    spitflame/ProfD.col \
    spitflame/ProfG \
    spitflame/ProfG.col \
    spitflame/RoueAr \
    spitflame/RoueAr.col \
    spitflame/RoueD \
    spitflame/RoueD.col \
    spitflame/RoueG \
    spitflame/RoueG.col \
    spitflame/StabD \
    spitflame/StabD.col \
    spitflame/StabG \
    spitflame/StabG.col \
    spitflame/TabBord \
    spitflame/TabBord.col \
    spitflame/Verriere \
    spitflame/Verriere.col \
    tank/Canon1 \
    tank/Canon1.col \
    tank/Canon2 \
    tank/Canon2.col \
    tank/Canon3 \
    tank/Canon3.col \
    tank/Canon4 \
    tank/Canon4.col \
    tank/Carlingue \
    tank/Carlingue.col \
    tank/ChenilleD \
    tank/ChenilleD.col \
    tank/ChenilleG \
    tank/ChenilleG.col \
    tanklight/Canon1 \
    tanklight/Canon2 \
    tanklight/Canon3 \
    tanklight/Canon4 \
    tanklight/Carlingue \
    tanklight/ChenilleD \
    tanklight/ChenilleG \
    tanklight/Rotor.col \
    tanklight/Tourelle \
    tank/Rotor \
    tank/Rotor.col \
    tank/Tourelle \
    tank/Tourelle.col \
    toyvion/AileD \
    toyvion/AileD.col \
    toyvion/AileG \
    toyvion/AileG_0 \
    toyvion/AileG_1 \
    toyvion/AileG.col \
    toyvion/Bomb1 \
    toyvion/Bomb1A1 \
    toyvion/Bomb1A1.col \
    toyvion/Bomb1A2 \
    toyvion/Bomb1A2.col \
    toyvion/Bomb1A3 \
    toyvion/Bomb1A3.col \
    toyvion/Bomb1.col \
    toyvion/Bomb1Q \
    toyvion/Bomb1Q.col \
    toyvion/Bomb2 \
    toyvion/Bomb2A1 \
    toyvion/Bomb2A1.col \
    toyvion/Bomb2A2 \
    toyvion/Bomb2A2.col \
    toyvion/Bomb2A3 \
    toyvion/Bomb2A3.col \
    toyvion/Bomb2.col \
    toyvion/Bomb2Q \
    toyvion/Bomb2Q.col \
    toyvion/Bomb3 \
    toyvion/Bomb3A1 \
    toyvion/Bomb3A1.col \
    toyvion/Bomb3A2 \
    toyvion/Bomb3A2.col \
    toyvion/Bomb3A3 \
    toyvion/Bomb3A3.col \
    toyvion/Bomb3.col \
    toyvion/Bomb3Q \
    toyvion/Bomb3Q.col \
    toyvion/Cabine \
    toyvion/Cabine.col \
    toyvion/Canon \
    toyvion/Capot \
    toyvion/Capot.col \
    toyvion/CharnD \
    toyvion/CharnG \
    toyvion/CharnProf \
    toyvion/Gouv \
    toyvion/Gouv.col \
    toyvion/Hel1 \
    toyvion/Hel1.col \
    toyvion/Hel2 \
    toyvion/Hel2.col \
    toyvionlight/AileD \
    toyvionlight/AileG \
    toyvionlight/Bomb1 \
    toyvionlight/Bomb1A1 \
    toyvionlight/Bomb1A2 \
    toyvionlight/Bomb1A3 \
    toyvionlight/Bomb1.col \
    toyvionlight/Bomb2 \
    toyvionlight/Bomb2A1 \
    toyvionlight/Bomb2A2 \
    toyvionlight/Bomb2A3 \
    toyvionlight/Bomb2.col \
    toyvionlight/Bomb3 \
    toyvionlight/Bomb3A1 \
    toyvionlight/Bomb3A2 \
    toyvionlight/Bomb3A3 \
    toyvionlight/Bomb3.col \
    toyvionlight/Cabine \
    toyvionlight/Capot \
    toyvionlight/Gouv \
    toyvionlight/Hel1 \
    toyvionlight/Hel2 \
    toyvionlight/Moyeux \
    toyvionlight/PiedRD \
    toyvionlight/PiedRG \
    toyvionlight/Queue \
    toyvionlight/RoueD \
    toyvionlight/RoueG \
    toyvionlight/StabD \
    toyvionlight/StabG \
    toyvionlight/Verierre \
    toyvion/Moyeux \
    toyvion/Moyeux.col \
    toyvion/PiedRA \
    toyvion/PiedRA.col \
    toyvion/PiedRD \
    toyvion/PiedRD.col \
    toyvion/PiedRG \
    toyvion/PiedRG.col \
    toyvion/PosCam \
    toyvion/Queue \
    toyvion/Queue.col \
    toyvion/RoueA \
    toyvion/RoueA.col \
    toyvion/RoueD \
    toyvion/RoueD.col \
    toyvion/RoueG \
    toyvion/RoueG.col \
    toyvion/StabD \
    toyvion/StabD.col \
    toyvion/StabG \
    toyvion/StabG.col \
    toyvion/TabBord \
    toyvion/TabBord.col \
    toyvion/Tube1 \
    toyvion/Tube1.col \
    toyvion/Tube2 \
    toyvion/Tube2.col \
    toyvion/Tube3 \
    toyvion/Tube3.col \
    toyvion/Verierre \
    toyvion/Verierre.col \
    toyvion/VolD \
    toyvion/VolD.col \
    toyvion/VolG \
    toyvion/VolG.col \
    toyvion/VProfD \
    toyvion/VProfD.col \
    toyvion/VProfG \
    toyvion/VProfG.col \
    tracteur/BrasD \
    tracteur/BrasD.col \
    tracteur/BrasG \
    tracteur/BrasG.col \
    tracteur/Capot \
    tracteur/Capot.col \
    tracteur/Corp \
    tracteur/Corp.col \
    tracteur/EssD \
    tracteur/EssD.col \
    tracteur/EssG \
    tracteur/EssG.col \
    tracteur/PhareD \
    tracteur/PhareD.col \
    tracteur/PhareG \
    tracteur/PhareG.col \
    tracteur/RoueAD \
    tracteur/RoueAD.col \
    tracteur/RoueAG \
    tracteur/RoueAG.col \
    tracteur/RoueArD \
    tracteur/RoueArD.col \
    tracteur/RoueArG \
    tracteur/RoueArG.col \
    tracteur/Volant \
    tracteur/Volant.col \
    usine/Cheminee \
    usine/Cheminee.col \
    usine/Usine \
    usine/Usine.col \
    van/PhareD \
    van/PhareD.col \
    van/PhareG \
    van/PhareG.col \
    van/RouesAr \
    van/RouesAr.col \
    van/RouesAv \
    van/RouesAv.col \
    van/Van \
    van/Van.col \
    van/VanLight \
    vehic/Camion \
    vehic/Camion.col \
    vehic/Camionnette \
    vehic/Camionnette.col \
    vehic/Phare1 \
    vehic/Phare1.col \
    vehic/Phare2 \
    vehic/Phare2.col \
    vehic/Pharenette1 \
    vehic/Pharenette1.col \
    vehic/Pharenette2 \
    vehic/Pharenette2.col \
    vehic/Roues \
    vehic/Roues.col \
    vehic/Rouesnette \
    vehic/Rouesnette.col \
    vion1/AileDroite \
    vion1/AileDroite.col \
    vion1/AileDroiteExt \
    vion1/AileDroiteExt.col \
    vion1/AileGauche \
    vion1/AileGauche.col \
    vion1/AileGaucheExt \
    vion1/AileGaucheExt.col \
    vion1/CharniereDroite \
    vion1/CharniereDroite.col \
    vion1/CharniereGauche \
    vion1/CharniereGauche.col \
    vion1/Cockpit \
    vion1/Cockpit.col \
    vion1/EssieuDroit \
    vion1/EssieuDroit.col \
    vion1/EssieuGauche \
    vion1/EssieuGauche.col \
    vion1/Fuselage \
    vion1/FuselageArriere \
    vion1/FuselageArriere.col \
    vion1/FuselageAvant \
    vion1/FuselageAvant.col \
    vion1/Fuselage.col \
    vion1/Gouvernail \
    vion1/Gouvernail.col \
    vion1/HBomb1 \
    vion1/HBomb1A1 \
    vion1/HBomb1A1.col \
    vion1/HBomb1A2 \
    vion1/HBomb1A2.col \
    vion1/HBomb1A3 \
    vion1/HBomb1A3.col \
    vion1/HBomb1A4 \
    vion1/HBomb1A4.col \
    vion1/HBomb1.col \
    vion1/HBomb2 \
    vion1/HBomb2A1 \
    vion1/HBomb2A1.col \
    vion1/HBomb2A2 \
    vion1/HBomb2A2.col \
    vion1/HBomb2A3 \
    vion1/HBomb2A3.col \
    vion1/HBomb2A4 \
    vion1/HBomb2A4.col \
    vion1/HBomb2.col \
    vion1/HBomb3 \
    vion1/HBomb3A1 \
    vion1/HBomb3A1.col \
    vion1/HBomb3A2 \
    vion1/HBomb3A2.col \
    vion1/HBomb3A3 \
    vion1/HBomb3A3.col \
    vion1/HBomb3A4 \
    vion1/HBomb3A4.col \
    vion1/HBomb3.col \
    vion1/HBomb4 \
    vion1/HBomb4A1 \
    vion1/HBomb4A1.col \
    vion1/HBomb4A2 \
    vion1/HBomb4A2.col \
    vion1/HBomb4A3 \
    vion1/HBomb4A3.col \
    vion1/HBomb4A4 \
    vion1/HBomb4A4.col \
    vion1/HBomb4.col \
    vion1/LBomb1 \
    vion1/LBomb10 \
    vion1/LBomb10.col \
    vion1/LBomb11 \
    vion1/LBomb11.col \
    vion1/LBomb12 \
    vion1/LBomb12.col \
    vion1/LBomb13 \
    vion1/LBomb13.col \
    vion1/LBomb14 \
    vion1/LBomb14.col \
    vion1/LBomb1.col \
    vion1/LBomb2 \
    vion1/LBomb2.col \
    vion1/LBomb3 \
    vion1/LBomb3.col \
    vion1/LBomb4 \
    vion1/LBomb4.col \
    vion1/LBomb5 \
    vion1/LBomb5.col \
    vion1/LBomb6 \
    vion1/LBomb6.col \
    vion1/LBomb7 \
    vion1/LBomb7.col \
    vion1/LBomb8 \
    vion1/LBomb8.col \
    vion1/LBomb9 \
    vion1/LBomb9.col \
    vion1/Moyeux \
    vion1/Moyeux.col \
    vion1/Pale1 \
    vion1/Pale1.col \
    vion1/Pale2 \
    vion1/Pale2.col \
    vion1/Pale3 \
    vion1/Pale3.col \
    vion1/PosCam \
    vion1/PosCam.col \
    vion1/RoueArriere \
    vion1/RoueArriere.col \
    vion1/RoueDroite \
    vion1/RoueDroite.col \
    vion1/RoueGauche \
    vion1/RoueGauche.col \
    vion1/StabDroite \
    vion1/StabDroite.col \
    vion1/StabGauche \
    vion1/StabGauche.col \
    vion1/Verriere \
    vion1/Verriere.col \
    vion1/VolDirection \
    vion1/VolDirection.col \
    vion1/VoletDroit \
    vion1/VoletDroit.col \
    vion1/VoletGauche \
    vion1/VoletGauche.col \
    vion1/VolProfDroite \
    vion1/VolProfDroite.col \
    vion1/VolProfGauche \
    vion1/VolProfGauche.col \
    vion2/AileDroite \
    vion2/AileDroite.col \
    vion2/AileGauche \
    vion2/AileGauche.col \
    vion2/CharniereDroite \
    vion2/CharniereDroite.col \
    vion2/CharniereGauche \
    vion2/CharniereGauche.col \
    vion2/Cockpit \
    vion2/Cockpit.col \
    vion2/DeriveDroite \
    vion2/DeriveDroite.col \
    vion2/DeriveGauche \
    vion2/DeriveGauche.col \
    vion2/EssieuDroit \
    vion2/EssieuDroit.col \
    vion2/EssieuGauche \
    vion2/EssieuGauche.col \
    vion2/FinAileDroite \
    vion2/FinAileDroite.col \
    vion2/FinAileGauche \
    vion2/FinAileGauche.col \
    vion2/FuselageArriere \
    vion2/FuselageArriere.col \
    vion2/FuselageAvant \
    vion2/FuselageAvant.col \
    vion2/FuselageCabine \
    vion2/FuselageCabine.col \
    vion2/Gouvernail \
    vion2/Gouvernail.col \
    vion2/HBomb1 \
    vion2/HBomb1A1 \
    vion2/HBomb1A1.col \
    vion2/HBomb1A2 \
    vion2/HBomb1A2.col \
    vion2/HBomb1A3 \
    vion2/HBomb1A3.col \
    vion2/HBomb1A4 \
    vion2/HBomb1A4.col \
    vion2/HBomb1.col \
    vion2/HBomb2 \
    vion2/HBomb2A1 \
    vion2/HBomb2A1.col \
    vion2/HBomb2A2 \
    vion2/HBomb2A2.col \
    vion2/HBomb2A3 \
    vion2/HBomb2A3.col \
    vion2/HBomb2A4 \
    vion2/HBomb2A4.col \
    vion2/HBomb2.col \
    vion2/HBomb3 \
    vion2/HBomb3A1 \
    vion2/HBomb3A1.col \
    vion2/HBomb3A2 \
    vion2/HBomb3A2.col \
    vion2/HBomb3A3 \
    vion2/HBomb3A3.col \
    vion2/HBomb3A4 \
    vion2/HBomb3A4.col \
    vion2/HBomb3.col \
    vion2/HBomb4 \
    vion2/HBomb4A1 \
    vion2/HBomb4A1.col \
    vion2/HBomb4A2 \
    vion2/HBomb4A2.col \
    vion2/HBomb4A3 \
    vion2/HBomb4A3.col \
    vion2/HBomb4A4 \
    vion2/HBomb4A4.col \
    vion2/HBomb4.col \
    vion2/HBomb5 \
    vion2/HBomb5A1 \
    vion2/HBomb5A1.col \
    vion2/HBomb5A2 \
    vion2/HBomb5A2.col \
    vion2/HBomb5A3 \
    vion2/HBomb5A3.col \
    vion2/HBomb5A4 \
    vion2/HBomb5A4.col \
    vion2/HBomb5.col \
    vion2/HBomb6 \
    vion2/HBomb6A1 \
    vion2/HBomb6A1.col \
    vion2/HBomb6A2 \
    vion2/HBomb6A2.col \
    vion2/HBomb6A3 \
    vion2/HBomb6A3.col \
    vion2/HBomb6A4 \
    vion2/HBomb6A4.col \
    vion2/HBomb6.col \
    vion2/LBomb1 \
    vion2/LBomb10 \
    vion2/LBomb11 \
    vion2/LBomb12 \
    vion2/LBomb13 \
    vion2/LBomb14 \
    vion2/LBomb15 \
    vion2/LBomb15.col \
    vion2/LBomb16 \
    vion2/LBomb16.col \
    vion2/LBomb17 \
    vion2/LBomb17.col \
    vion2/LBomb18 \
    vion2/LBomb18.col \
    vion2/LBomb19 \
    vion2/LBomb19.col \
    vion2/LBomb2 \
    vion2/LBomb20 \
    vion2/LBomb20.col \
    vion2/LBomb21 \
    vion2/LBomb21.col \
    vion2/LBomb3 \
    vion2/LBomb4 \
    vion2/LBomb5 \
    vion2/LBomb6 \
    vion2/LBomb7 \
    vion2/LBomb8 \
    vion2/LBomb9 \
    vion2/MoyeuPale \
    vion2/MoyeuPale.col \
    vion2/Pale1 \
    vion2/Pale1.col \
    vion2/Pale2 \
    vion2/Pale2.col \
    vion2/Pale3 \
    vion2/Pale3.col \
    vion2/PiedArriere \
    vion2/PiedArriere.col \
    vion2/PosCam \
    vion2/PosCam.col \
    vion2/RoueArriere \
    vion2/RoueArriere.col \
    vion2/RoueDroite \
    vion2/RoueDroite.col \
    vion2/RoueGauche \
    vion2/RoueGauche.col \
    vion2/Verriere \
    vion2/Verriere.col \
    zeppelin/Arc1 \
    zeppelin/Arc1.col \
    zeppelin/Arc2 \
    zeppelin/Arc2.col \
    zeppelin/Ballon \
    zeppelin/Ballon.col \
    zeppelin/Cabine \
    zeppelin/Cabine.col \
    zeppelin/CharnCan1 \
    zeppelin/CharnCan2 \
    zeppelin/CharnCan3 \
    zeppelin/CharnCan4 \
    zeppelin/CharnCan5 \
    zeppelin/CharnCan6 \
    zeppelin/CharnD \
    zeppelin/CharnH \
    zeppelin/DebBallon \
    zeppelin/DebBallon.col \
    zeppelin/FinBallon \
    zeppelin/FinBallon.col \
    zeppelin/GouvB \
    zeppelin/GouvB.col \
    zeppelin/GouvD \
    zeppelin/GouvD.col \
    zeppelin/GouvG \
    zeppelin/GouvG.col \
    zeppelin/GouvH \
    zeppelin/GouvH.col \
    zeppelin/HelD \
    zeppelin/HelD.col \
    zeppelin/HelG \
    zeppelin/HelG.col \
    zeppelin/InclinB \
    zeppelin/InclinB.col \
    zeppelin/InclinD \
    zeppelin/InclinD.col \
    zeppelin/InclinG \
    zeppelin/InclinG.col \
    zeppelin/InclinH \
    zeppelin/InclinH.col \
    zeppelin/MoyD \
    zeppelin/MoyG \
    zeppelin/Tige

dist_doc_DATA = ../COPYING ../GPL.txt ../README.md .fachodarc

fachoda_SOURCES = \
    renderer.c heightfield.c model.c radio.c robot.c \
    instruments.c txt.c physics.c mapping.c \
    control.c sun.c map.c sound.c ravages.c \
    present.c keycodes.c roads.c \
    init.c intro.c main.c video_sdl.c world.c \
    gtime.c file.c config.c
fachoda_CFLAGS = $(SDL_CFLAGS) $(GL_CFLAGS)
fachoda_LDFLAGS = $(SDL_LIBS) $(OPENAL_LIBS) $(GL_LIBS)

getkeyname_SOURCES = getkeyname.c
getkeyname_CFLAGS = $(SDL_CFLAGS)
getkeyname_LDFLAGS = $(SDL_LIBS)
